[gd_scene load_steps=44 format=3 uid="uid://bvgjc2k5tv8f2"]

[ext_resource type="Texture2D" uid="uid://c8aoso7hi3p35" path="res://Assets/PixelArtAssets/Minigame1 Assets/Placeholder.png" id="1_770w0"]
<<<<<<< HEAD
[ext_resource type="Script" uid="uid://w5v46oq5aeqw" path="res://Scripts/main-minigame.gd" id="1_wq1rt"]
[ext_resource type="Script" uid="uid://dg84m2wach8bh" path="res://Scripts/maincharacter.gd" id="2_7dw7j"]
=======
[ext_resource type="Script" uid="uid://w5v46oq5aeqw" path="res://Assets/Scripts/Minigame1/main-minigame.gd" id="1_wq1rt"]
[ext_resource type="Script" uid="uid://dg84m2wach8bh" path="res://Assets/Scripts/Minigame1/maincharacter.gd" id="2_7dw7j"]
>>>>>>> origin/main
[ext_resource type="Texture2D" uid="uid://dhv7ppbcw2hxs" path="res://Assets/PixelArtAssets/Minigame1 Assets/GAME 1 BG.png" id="2_8jner"]
[ext_resource type="Texture2D" uid="uid://bfae6cf8wfkja" path="res://Assets/PixelArtAssets/Minigame1 Assets/Relaxed.png" id="2_mamnj"]
[ext_resource type="Texture2D" uid="uid://ddeyqaayp2xh4" path="res://Assets/PixelArtAssets/Minigame1 Assets/Throw body.png" id="3_vovbx"]
[ext_resource type="FontFile" uid="uid://j13h60holdji" path="res://Assets/Fonts/BoldPixels1.4.ttf" id="4_8jner"]
[ext_resource type="Texture2D" uid="uid://b6ajkp32njt7b" path="res://Assets/PixelArtAssets/Minigame1 Assets/Hold.png" id="4_lp0bk"]
[ext_resource type="Texture2D" uid="uid://cchkgui4itcwh" path="res://Assets/PixelArtAssets/Minigame1 Assets/Ready.png" id="5_e8iw6"]
[ext_resource type="Texture2D" uid="uid://bom5spwi3g8mg" path="res://Assets/PixelArtAssets/Minigame1 Assets/Throw.png" id="6_uqgsb"]
<<<<<<< HEAD
[ext_resource type="Script" uid="uid://joalmfwdkqgs" path="res://Scripts/AreaNon-Bio.gd" id="10_8jner"]
[ext_resource type="Texture2D" uid="uid://b3odco48r7fja" path="res://Assets/PixelArtAssets/Minigame1 Assets/Non-Biodegradable.png" id="11_nrv47"]
[ext_resource type="Texture2D" uid="uid://c84oxm8gtjwbr" path="res://Assets/PixelArtAssets/Minigame1 Assets/TimesUpBoard.png" id="12_35g86"]
[ext_resource type="Script" uid="uid://d1vifxvlqf25n" path="res://Scripts/Area-Bio.gd" id="12_teprs"]
[ext_resource type="Texture2D" uid="uid://bqgprviwk427n" path="res://Assets/PixelArtAssets/Minigame1 Assets/Biodegrable.png" id="13_35g86"]
[ext_resource type="FontFile" uid="uid://c147if7tplg4j" path="res://Assets/Fonts/ARCADECLASSIC.TTF" id="13_ii2c5"]
[ext_resource type="Script" uid="uid://b7esox7orlhk0" path="res://Scripts/Area-Recyclable.gd" id="14_ii2c5"]
=======
[ext_resource type="Script" uid="uid://joalmfwdkqgs" path="res://Assets/Scripts/Minigame1/AreaNon-Bio.gd" id="10_8jner"]
[ext_resource type="Texture2D" uid="uid://b3odco48r7fja" path="res://Assets/PixelArtAssets/Minigame1 Assets/Non-Biodegradable.png" id="11_nrv47"]
[ext_resource type="Texture2D" uid="uid://c84oxm8gtjwbr" path="res://Assets/PixelArtAssets/Minigame1 Assets/TimesUpBoard.png" id="12_35g86"]
[ext_resource type="Script" uid="uid://d1vifxvlqf25n" path="res://Assets/Scripts/Minigame1/Area-Bio.gd" id="12_teprs"]
[ext_resource type="Texture2D" uid="uid://bqgprviwk427n" path="res://Assets/PixelArtAssets/Minigame1 Assets/Biodegrable.png" id="13_35g86"]
[ext_resource type="FontFile" uid="uid://c147if7tplg4j" path="res://Assets/Fonts/ARCADECLASSIC.TTF" id="13_ii2c5"]
[ext_resource type="Script" uid="uid://b7esox7orlhk0" path="res://Assets/Scripts/Minigame1/Area-Recyclable.gd" id="14_ii2c5"]
>>>>>>> origin/main
[ext_resource type="Texture2D" uid="uid://bu26jl1i1js6b" path="res://Assets/PixelArtAssets/Minigame1 Assets/MyNormalTimesUpButton.png" id="14_s3r6w"]
[ext_resource type="Texture2D" uid="uid://dmbxh152j54t" path="res://Assets/PixelArtAssets/Minigame1 Assets/MyPressedTimesUpButton.png" id="15_s0p2d"]
[ext_resource type="Texture2D" uid="uid://wm7u7c1jwunn" path="res://Assets/PixelArtAssets/Minigame1 Assets/Recylable.png" id="15_s3r6w"]
[ext_resource type="Texture2D" uid="uid://br2khc2lh7510" path="res://Assets/PixelArtAssets/Minigame1 Assets/ScoreBoard.png" id="17_s3r6w"]
[ext_resource type="Texture2D" uid="uid://ci57a5eounlm1" path="res://Assets/PixelArtAssets/Minigame1 Assets/Timer.png" id="18_s0p2d"]
[ext_resource type="AudioStream" uid="uid://ca1scusyma8yn" path="res://Assets/SoundEffects/CLICKMenu.mp3" id="21_ii2c5"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3pawu"]
texture = ExtResource("2_8jner")

[sub_resource type="LabelSettings" id="LabelSettings_wq1rt"]
font = ExtResource("4_8jner")
font_size = 44
outline_size = 10
outline_color = Color(0, 0, 0, 1)
shadow_size = 10

[sub_resource type="SpriteFrames" id="SpriteFrames_7dw7j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_mamnj")
}, {
"duration": 1.0,
"texture": ExtResource("3_vovbx")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_8jner"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_lp0bk")
}, {
"duration": 1.0,
"texture": ExtResource("5_e8iw6")
}, {
"duration": 1.0,
"texture": ExtResource("6_uqgsb")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s0p2d"]
size = Vector2(66.5313, 105)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5mrbq"]
size = Vector2(1152, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0tpae"]
size = Vector2(17.125, 112.375)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_s0p2d"]
texture = ExtResource("17_s3r6w")

[sub_resource type="LabelSettings" id="LabelSettings_3pawu"]
font = ExtResource("4_8jner")
font_size = 44
outline_size = 10
outline_color = Color(0, 0, 0, 1)
shadow_size = 10
shadow_color = Color(0.145098, 0.145098, 0.145098, 0)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0tpae"]
texture = ExtResource("18_s0p2d")

[sub_resource type="LabelSettings" id="LabelSettings_7dw7j"]
font = ExtResource("4_8jner")
font_size = 44
outline_size = 6
outline_color = Color(0, 0, 0, 1)
shadow_size = 13
shadow_color = Color(0.152941, 0.133333, 0.631373, 0.890196)
shadow_offset = Vector2(1.83, 1.21)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s3r6w"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_0tpae"]
atlas = ExtResource("14_s3r6w")

[sub_resource type="AtlasTexture" id="AtlasTexture_3pawu"]
atlas = ExtResource("15_s0p2d")

[sub_resource type="Animation" id="Animation_shiou"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_pvwyg"]
resource_name = "transition"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vmhu5"]
_data = {
&"RESET": SubResource("Animation_shiou"),
&"transition": SubResource("Animation_pvwyg")
}

[sub_resource type="Animation" id="Animation_0mh0k"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_vmhu5"]
resource_name = "transition"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7ft58"]
_data = {
&"RESET": SubResource("Animation_0mh0k"),
&"transition": SubResource("Animation_vmhu5")
}

[node name="Minigame1" type="Node2D"]
script = ExtResource("1_wq1rt")

[node name="Panel" type="Panel" parent="."]
layout_direction = 2
offset_right = 1162.0
offset_bottom = 649.0
theme_override_styles/panel = SubResource("StyleBoxTexture_3pawu")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(577.5, 327.5)
scale = Vector2(0.997396, 1.0108)
texture = ExtResource("2_8jner")

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
script = ExtResource("2_7dw7j")

[node name="DisplayTrash" type="Label" parent="CharacterBody2D"]
offset_left = 221.0
offset_top = 24.0
offset_right = 512.0
offset_bottom = 64.0
label_settings = SubResource("LabelSettings_wq1rt")

[node name="Placeholder" type="Sprite2D" parent="CharacterBody2D"]
position = Vector2(106, 106)
scale = Vector2(0.683594, 0.701774)
texture = ExtResource("1_770w0")

[node name="ThrowPreview" type="TextureRect" parent="CharacterBody2D"]
offset_left = 41.0
offset_top = 35.0
offset_right = 159.0
offset_bottom = 151.0

[node name="SpawnerNode" type="Node2D" parent="CharacterBody2D"]
position = Vector2(236, 449)

[node name="Body" type="AnimatedSprite2D" parent="CharacterBody2D"]
position = Vector2(214, 441)
sprite_frames = SubResource("SpriteFrames_7dw7j")

[node name="Hands" type="AnimatedSprite2D" parent="CharacterBody2D"]
position = Vector2(216, 442)
sprite_frames = SubResource("SpriteFrames_8jner")

[node name="CharginBar" type="ProgressBar" parent="CharacterBody2D"]
offset_left = 146.0
offset_top = 316.0
offset_right = 281.0
offset_bottom = 362.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 30

[node name="Non-Biodegradable" type="Area2D" parent="."]
position = Vector2(976, 457)
script = ExtResource("10_8jner")

[node name="Sprite2D" type="Sprite2D" parent="Non-Biodegradable"]
position = Vector2(0, 4.76837e-07)
scale = Vector2(0.15, 0.15)
texture = ExtResource("11_nrv47")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Non-Biodegradable"]
position = Vector2(10, 6)
shape = SubResource("RectangleShape2D_s0p2d")

[node name="Biodegradable" type="Area2D" parent="."]
position = Vector2(742, 457)
script = ExtResource("12_teprs")

[node name="Sprite2D" type="Sprite2D" parent="Biodegradable"]
position = Vector2(0, -1.90735e-06)
scale = Vector2(0.15, 0.15)
texture = ExtResource("13_35g86")

[node name="ScoreHitbox" type="CollisionShape2D" parent="Biodegradable"]
position = Vector2(8, 6)
shape = SubResource("RectangleShape2D_s0p2d")

[node name="Recylable" type="Area2D" parent="."]
position = Vector2(860, 457)
script = ExtResource("14_ii2c5")

[node name="Sprite2D" type="Sprite2D" parent="Recylable"]
position = Vector2(-3.8147e-06, -1.90735e-06)
scale = Vector2(0.15, 0.15)
texture = ExtResource("15_s3r6w")

[node name="ScoreHitbox" type="CollisionShape2D" parent="Recylable"]
position = Vector2(10, 6)
shape = SubResource("RectangleShape2D_s0p2d")

[node name="Collision Hitbox" type="StaticBody2D" parent="."]

[node name="Hitbox Floor" type="CollisionShape2D" parent="Collision Hitbox"]
position = Vector2(576, 525)
shape = SubResource("RectangleShape2D_5mrbq")

[node name="HitboxBioleft" type="CollisionShape2D" parent="Collision Hitbox"]
position = Vector2(708, 464)
shape = SubResource("RectangleShape2D_0tpae")

[node name="HitBoxBioright" type="CollisionShape2D" parent="Collision Hitbox"]
position = Vector2(791.75, 455.25)
shape = SubResource("RectangleShape2D_0tpae")

[node name="HitboxRecyleft" type="CollisionShape2D" parent="Collision Hitbox"]
position = Vector2(828, 464.188)
shape = SubResource("RectangleShape2D_0tpae")

[node name="HitboxRecylright" type="CollisionShape2D" parent="Collision Hitbox"]
position = Vector2(912, 456)
shape = SubResource("RectangleShape2D_0tpae")

[node name="HitboxNonBioleft" type="CollisionShape2D" parent="Collision Hitbox"]
position = Vector2(944, 463)
shape = SubResource("RectangleShape2D_0tpae")

[node name="HitboxNonBioright" type="CollisionShape2D" parent="Collision Hitbox"]
position = Vector2(1028, 455)
shape = SubResource("RectangleShape2D_0tpae")

[node name="ScoreBoard" type="Panel" parent="."]
offset_left = 785.0
offset_top = 9.0
offset_right = 978.0
offset_bottom = 80.0
theme_override_styles/panel = SubResource("StyleBoxTexture_s0p2d")

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 823.0
offset_top = 27.0
offset_right = 933.0
offset_bottom = 67.0
scale = Vector2(0.78, 0.755)
text = "Score:"
label_settings = SubResource("LabelSettings_3pawu")

[node name="GoalPopup" type="Label" parent="."]
offset_left = 647.0
offset_top = 286.0
offset_right = 1116.0
offset_bottom = 377.0
text = "
"
label_settings = SubResource("LabelSettings_3pawu")
horizontal_alignment = 1
vertical_alignment = 1

[node name="StopWatch" type="Panel" parent="."]
offset_left = 1002.0
offset_top = 3.0
offset_right = 1141.0
offset_bottom = 145.0
theme_override_styles/panel = SubResource("StyleBoxTexture_0tpae")

[node name="Timer" type="Timer" parent="."]

[node name="TimerLabel" type="Label" parent="."]
offset_left = 1035.0
offset_top = 62.0
offset_right = 1109.0
offset_bottom = 102.0
label_settings = SubResource("LabelSettings_7dw7j")
horizontal_alignment = 1

[node name="ModalBlocker" type="ColorRect" parent="."]
offset_left = -5.0
offset_right = 66.0
offset_bottom = 40.0
scale = Vector2(16.39, 16.39)
color = Color(0, 0, 0, 0.796078)

[node name="StartGameBoard" type="PanelContainer" parent="."]
visible = false
offset_left = 383.145
offset_top = 212.34
offset_right = 1186.15
offset_bottom = 760.34
scale = Vector2(0.48, 0.325)
theme_override_styles/panel = SubResource("StyleBoxFlat_s3r6w")

[node name="MarginContainer" type="MarginContainer" parent="StartGameBoard"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="StartGameBoard/MarginContainer"]
layout_mode = 2
texture = ExtResource("12_35g86")

[node name="START THE GAME?" type="Label" parent="StartGameBoard/MarginContainer/TextureRect"]
layout_mode = 0
offset_left = 78.8646
offset_top = 103.569
offset_right = 886.865
offset_bottom = 211.569
scale = Vector2(0.795, 1.26)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("13_ii2c5")
theme_override_font_sizes/font_size = 80
text = "START THE GAME?"
horizontal_alignment = 1

[node name="StartGameButton" type="TextureButton" parent="StartGameBoard/MarginContainer/TextureRect"]
layout_mode = 0
offset_left = 274.698
offset_top = 260.646
offset_right = 867.698
offset_bottom = 528.646
scale = Vector2(0.433, 0.567)
texture_normal = SubResource("AtlasTexture_0tpae")
texture_pressed = SubResource("AtlasTexture_3pawu")

[node name="StartGameButtonClickSoundEffect" type="AudioStreamPlayer" parent="StartGameBoard/MarginContainer/TextureRect/StartGameButton"]
stream = ExtResource("21_ii2c5")

[node name="TimesUpBoard" type="PanelContainer" parent="."]
visible = false
offset_left = 383.145
offset_top = 212.34
offset_right = 1186.15
offset_bottom = 760.34
scale = Vector2(0.48, 0.325)
theme_override_styles/panel = SubResource("StyleBoxFlat_s3r6w")

[node name="MarginContainer" type="MarginContainer" parent="TimesUpBoard"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="TimesUpBoard/MarginContainer"]
layout_mode = 2
texture = ExtResource("12_35g86")

[node name="CONTINUE TO THE NEXT GAME" type="Label" parent="TimesUpBoard/MarginContainer/TextureRect"]
layout_mode = 0
offset_left = 78.8646
offset_top = 140.646
offset_right = 886.865
offset_bottom = 209.646
scale = Vector2(0.795, 1.26)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("13_ii2c5")
theme_override_font_sizes/font_size = 67
text = "CONTINUE TO THE NEXT GAME"
horizontal_alignment = 1

[node name="TimesUpButton" type="TextureButton" parent="TimesUpBoard/MarginContainer/TextureRect"]
layout_mode = 0
offset_left = 274.698
offset_top = 260.646
offset_right = 867.698
offset_bottom = 528.646
scale = Vector2(0.433, 0.567)
texture_normal = SubResource("AtlasTexture_0tpae")
texture_pressed = SubResource("AtlasTexture_3pawu")

[node name="TimesUpButtonClickSoundEffect" type="AudioStreamPlayer" parent="TimesUpBoard/MarginContainer/TextureRect/TimesUpButton"]
stream = ExtResource("21_ii2c5")

[node name="FadeIn" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="FadeIn"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="FadeIn"]
root_node = NodePath("../ColorRect")
libraries = {
&"": SubResource("AnimationLibrary_vmhu5")
}
autoplay = "transition"

[node name="FadeOut" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="FadeOut"]
modulate = Color(0, 0, 0, 0)
top_level = true
offset_right = 1152.0
offset_bottom = 648.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="FadeOut"]
root_node = NodePath("../ColorRect")
libraries = {
&"": SubResource("AnimationLibrary_7ft58")
}

[connection signal="pressed" from="StartGameBoard/MarginContainer/TextureRect/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="TimesUpBoard/MarginContainer/TextureRect/TimesUpButton" to="." method="_on_times_up_button_pressed"]
